@@ -20,8 +20,8 @@ export("?", .DollarNames, .S3methods, .romans, CRAN.packages, Rprof,
        fixInNamespace, findLineNum, flush.console, formatOL, formatUL,
        getAnywhere, getCRANmirrors, getFromNamespace, getParseData,
        getParseText, getS3method, getSrcDirectory, getSrcFilename,
-       getSrcLocation, getSrcref, glob2rx, globalVariables, head,
-       head.matrix, help, help.request, help.search, help.start,
+       getSrcLocation, getSrcref, glob2rx, globalVariables, hasName,
+       head, head.matrix, help, help.request, help.search, help.start,
        history, install.packages, installed.packages, is.relistable,
        isS3method, isS3stdGeneric, limitedLabels, loadhistory, localeToCharset,
        ls.str, lsf.str, maintainer, make.packages.html, make.socket,
