@@ -106,6 +106,12 @@
 
       Its \code{toLatex()} method now includes the \code{running}
       component.
+
+      \code{options("interrupt")} can be used to specify a default
+      action for user interrupts. For now, if this option is not set and
+      the \code{error} option is set, then an unhandled user interrupt
+      invokes the \code{error} option. This may be dropped in the future
+      as \code{interrupt} conditions are not \code{error} conditions.
     }
   }
   \subsection{INSTALLATION and INCLUDED SOFTWARE}{
@@ -182,6 +188,10 @@
     \itemize{
       \item \code{extSoftVersion()} now reports the version (if any) of
       the \code{readline} library in use.
+      
+      \item Convenience function \code{hasName()} has been added; it 
+      is intended to replace the common idiom \code{!is.null(x$name)}
+      without the usually unintended partial name matching.
     }
   }
 
